--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -12,7 +12,8 @@
 	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/vrP-_T-h9YM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 	<div id="video-placeholder"></div>
 	<div id="closed-captions"> 
-		<p class="voice1">
+		<p class="voice1" data-text="
+		Officer K D 6 - 3 . 7. Let’s begin. Ready?">
 			Officer K D 6 - 3 . 7. Let’s begin. Ready?
 		</p>
 		<p class="voice2">
