--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -19,7 +19,7 @@
 		<p class="voice2">
 			Yes, sir
 		</p>
-		<p class="voice1">
+		<p class="voice1" data-text="Recite your baseline.">
 			Recite your baseline. 
 		</p>
 		<p class="voice2">
@@ -32,12 +32,12 @@
 			interlinked within cells, interlinked within one stem.
 		</p>
 		<p class="voice3">
-			Fuck off, skin-job!
+		(voorbijganger)	Fuck off, skin-job!
 		</p>
 		<p class="voice2">
 			And dreadfully distinct against the dark, a tall white fountain played...
 		</p>
-		<p class="voice1">
+		<p class="voice1" data-text="Cells.">
 			Cells.
 		</p>
 		<p class="voice2">
