--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -12,9 +12,10 @@
 	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/vrP-_T-h9YM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 	<div id="video-placeholder"></div>
 	<div id="closed-captions"> 
+		
 		<p class="voice1" data-text="
-		Officer K D 6 - 3 . 7. Let’s begin. Ready?">
-			Officer K D 6 - 3 . 7. Let’s begin. Ready?
+		Officer K D 6 - 3 . 7.  Let’s begin. Ready?">
+			Officer K D 6 - 3 . 7. <br> Let’s begin. <br> Ready?
 		</p>
 		<p class="voice2">
 			Yes, sir
@@ -193,6 +194,21 @@
 		<p class="">You're not even close to baseline</p>
 
 	</div>
+	<div class="daimonds">
+			<div class="diamond-lines">
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			  <div></div>
+			</div>
+		  </div>
+		  
 	
 	<script src="https://www.youtube.com/iframe_api"></script>
 	<script>var captions = new Array();</script>
