--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -16,137 +16,137 @@
 	<div id="closed-captions"> 
 		
 		<p class="voice1" data-text="
-		Officer K D 6 - 3 . 7.  Let’s begin. Ready?">
-			Officer K D 6 - 3 . 7. <br> Let’s begin. <br> Ready?
+		Interrogator: Officer K D 6 - 3 . 7.  Let’s begin. Ready?">
+		<span>Interrogator: </span>Officer KD6 - 3.7. Let’s begin. Ready?
 		</p>
 		<p class="voice2">
-			Yes, sir
+			<span id="officier">Officier K:</span> Yes, sir
 		</p>
-		<p class="voice1" data-text="Recite your baseline.">
-			Recite your baseline. 
-		</p>
-		<p class="voice2">
-			And blood-black nothingness began to spin
+		<p class="voice1" data-text="Interrogator: Recite your baseline.">
+				<span>Interrogator: </span>Recite your baseline. 
 		</p>
 		<p class="voice2">
-			A system of cells interlinked within cells,
+			<span id="officier" >Officier K:</span> And blood-black nothingness began to spin
 		</p>
 		<p class="voice2">
-			interlinked within cells, interlinked within one stem.
+			<span id="officier">Officier K:</span> A system of cells interlinked within cells,
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> interlinked within cells, interlinked within one stem.
 		</p>
 		<p class="voice3">
 		(voorbijganger)	Fuck off, skin-job!
 		</p>
 		<p class="voice2">
-			And dreadfully distinct against the dark, a tall white fountain played...
+			<span id="officier">Officier K:</span> And dreadfully distinct against the dark, a tall white fountain played...
+		</p>
+		<p class="voice1" data-text="Interrogator: Cells.">
+				<span>Interrogator: </span>Cells.
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> Cells.
+		</p>
+		<p class="voice1" data-text="Interrogator: Have you ever been in an institution?">
+				<span>Interrogator: </span>Have you ever been in an institution?
+		</p>
+		<p class="voice1">
+				<span>Interrogator: </span>Cells.
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> Cells.
+		</p>
+		<p class="voice1" data-text="Interrogator: Do they keep you in a cell?">
+				<span>Interrogator: </span>Do they keep you in a cell?
+		</p>
+		<p class="voice1" data-text="Cells.">
+				<span>Interrogator: </span>Cells.
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> Cells.
+		</p>
+		<p class="voice1" data-text="Interrogator: When you're not performing your duties, do they keep you in a little box?">
+				<span>Interrogator: </span>When you're not performing your duties, do they keep you in a little box?
 		</p>
 		<p class="voice1" data-text="Cells.">
 			Cells.
 		</p>
 		<p class="voice2">
-			Cells.
+			<span id="officier">Officier K:</span> Cells.
 		</p>
-		<p class="voice1">
-			Have you ever been in an institution?
-		</p>
-		<p class="voice1">
-			Cells.
+		<p class="voice1" data-text="Interrogator: Interlinked.">
+				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			Cells.
+			<span id="officier">Officier K:</span> Interlinked.
 		</p>
-		<p class="voice1">
-			Do they keep you in a cell?
+		<p class="voice1" data-text="Interrogator: What's it like to hold the hand of someone you love?">
+				<span>Interrogator: </span>What's it like to hold the hand of someone you love?
 		</p>
-		<p class="voice1">
-			Cells.
-		</p>
-		<p class="voice2">
-			Cells.
-		</p>
-		<p class="voice1">
-			When you're not performing your duties, do they keep you in a little box?
-		</p>
-		<p class="voice1">
-			Cells.
+		<p class="voice1" data-text="Interrogator: Interlinked.">
+				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			Cells.
+			<span id="officier">Officier K:</span> Interlinked.
 		</p>
-		<p class="voice1">
-			Interlinked.
+		<p class="voice1" data-text="Interrogator: Did they teach you how to feel, finger to finger?">
+				<span>Interrogator: </span>Did they teach you how to feel, finger to finger?
 		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			What's it like to hold the hand of someone you love?
-		</p>
-		<p class="voice1">
-			Interlinked.
+		<p class="voice1" data-text="Interrogator: Interlinked.">
+				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			<span id="officier">Officier K:</span> Interlinked.
 		</p>
-		<p class="voice1">
-			Did they teach you how to feel, finger to finger?
+		<p class="voice1" data-text="Interrogator: Do you long for having your heart interlinked?">
+				<span>Interrogator: </span>Do you long for having your heart interlinked?
 		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Do you long for having your heart interlinked?
-		</p>
-		<p class="voice1">
-			Interlinked.
+		<p class="voice1" data-text="Interrogator: Interlinked.">
+				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			Interlinked.
+			<span id="officier">Officier K:</span> Interlinked.
 		</p>
-		<p class="voice1">
-			Do you dream about being interlinked?
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			What's it like to hold your child in your arms?
-		</p>
-		<p class="voice1">
-			Interlinked.
+		<p class="voice1" data-text="Interrogator: Do you dream about being interlinked?">
+				<span>Interrogator: </span>Do you dream about being interlinked?
 		</p>
 		<p class="voice2">
-			Interlinked.
+			<span id="officier">Officier K:</span> Interlinked.
 		</p>
-		<p class="voice1">
-			Do you feel that there's a part of you that's missing?
+		<p class="voice1" data-text="Interrogator: What's it like to hold your child in your arms?">
+				<span>Interrogator: </span>What's it like to hold your child in your arms?
 		</p>
-		<p class="voice1">
-			Interlinked.
-		</p>
-		<p class="voice2">
-			Interlinked.
-		</p>
-		<p class="voice1">
-			Within cells interlinked.
+		<p class="voice1" data-text="Interrogator: Interlinked.">
+				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			Within cells interlinked.
+			<span id="officier">Officier K:</span> Interlinked.
 		</p>
-		<p class="voice1">
-			Why don't you say that three times: "within cells interlinked"
+		<p class="voice1" data-text="Interrogator: Do you feel that there's a part of you that's missing?">
+				<span>Interrogator: </span>Do you feel that there's a part of you that's missing?
 		</p>
-		<p class="voice2">
-			Within cells interlinked.
-		</p>
-		<p class="voice2">
-			Within cells interlinked.
+		<p class="voice1" data-text="Interrogator: Interlinked.">
+				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			Within cells interlinked.
+			<span id="officier">Officier K:</span> Interlinked.
+		</p>
+		<p class="voice1" data-text="Interrogator: Within cells interlinked.">
+				<span>Interrogator: </span>Within cells interlinked.
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> Within cells interlinked.
+		</p>
+		<p class="voice1" data-text="Interrogator: Why don't you say that three times: within cells interlinked" >
+				<span>Interrogator: </span>Why don't you say that three times: "within cells interlinked"
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> Within cells interlinked.
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> Within cells interlinked.
+		</p>
+		<p class="voice2">
+			<span id="officier">Officier K:</span> Within cells interlinked.
 		</p>
 		<p class="voice4">
 			We're done.
@@ -158,7 +158,7 @@
 			You can pick up your bonus.
 		</p>
 		<p class="voice2">
-			Thank you, sir.
+			<span id="officier">Officier K:</span> Thank you, sir.
 		</p>
 
 
