--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css.css">
 	
 </head>
-<body>
+<body class="sound4-5">
 	<div id="curtain"></div>
 	<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/vrP-_T-h9YM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 	<div id="video-placeholder"></div>
