--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -17,10 +17,10 @@
 		
 		<p class="voice1" data-text="
 		Interrogator: Officer K D 6 - 3 . 7.  Let’s begin. Ready?">
-		<span>Interrogator: </span>Officer KD6 - 3.7. Let’s begin. Ready?
+		[Interrogator]Officer KD6 - 3.7. Let’s begin. Ready?
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Yes, sir
+			[K] Yes, sir
 		</p>
 		<p class="voice1" data-text="Interrogator: Recite your baseline.">
 				<span>Interrogator: </span>Recite your baseline. 
@@ -41,7 +41,7 @@
 			<span id="officier">Officier K:</span> And dreadfully distinct against the dark, a tall white fountain played...
 		</p>
 		<p class="voice1" data-text="Interrogator: Cells.">
-				<span>Interrogator: </span>Cells.
+			<span>Interrogator: </span>Cells.
 		</p>
 		<p class="voice2">
 			<span id="officier">Officier K:</span> Cells.
