--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -26,25 +26,25 @@
 				<span>Interrogator: </span>Recite your baseline. 
 		</p>
 		<p class="voice2">
-			<span id="officier" >Officier K:</span> And blood-black nothingness began to spin
+			[K] And blood-black nothingness began to spin
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> A system of cells interlinked within cells,
+			[K] A system of cells interlinked within cells,
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> interlinked within cells, interlinked within one stem.
+			[K] interlinked within cells, interlinked within one stem.
 		</p>
 		<p class="voice3">
 		(voorbijganger)	Fuck off, skin-job!
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> And dreadfully distinct against the dark, a tall white fountain played...
+			[K] And dreadfully distinct against the dark, a tall white fountain played...
 		</p>
 		<p class="voice1" data-text="Interrogator: Cells.">
 			<span>Interrogator: </span>Cells.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Cells.
+			[K] Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: Have you ever been in an institution?">
 				<span>Interrogator: </span>Have you ever been in an institution?
@@ -53,7 +53,7 @@
 				<span>Interrogator: </span>Cells.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Cells.
+			[K]Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do they keep you in a cell?">
 				<span>Interrogator: </span>Do they keep you in a cell?
@@ -62,7 +62,7 @@
 				<span>Interrogator: </span>Cells.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Cells.
+			[K] Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: When you're not performing your duties, do they keep you in a little box?">
 				<span>Interrogator: </span>When you're not performing your duties, do they keep you in a little box?
@@ -71,13 +71,13 @@
 			Cells.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Cells.
+			[K] Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: Interlinked.">
 				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Interlinked.
+			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: What's it like to hold the hand of someone you love?">
 				<span>Interrogator: </span>What's it like to hold the hand of someone you love?
@@ -86,7 +86,7 @@
 				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Interlinked.
+			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Did they teach you how to feel, finger to finger?">
 				<span>Interrogator: </span>Did they teach you how to feel, finger to finger?
@@ -95,7 +95,7 @@
 				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Interlinked.
+			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do you long for having your heart interlinked?">
 				<span>Interrogator: </span>Do you long for having your heart interlinked?
@@ -104,13 +104,13 @@
 				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Interlinked.
+			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do you dream about being interlinked?">
 				<span>Interrogator: </span>Do you dream about being interlinked?
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Interlinked.
+			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: What's it like to hold your child in your arms?">
 				<span>Interrogator: </span>What's it like to hold your child in your arms?
@@ -119,7 +119,7 @@
 				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Interlinked.
+			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do you feel that there's a part of you that's missing?">
 				<span>Interrogator: </span>Do you feel that there's a part of you that's missing?
@@ -128,25 +128,25 @@
 				<span>Interrogator: </span>Interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Interlinked.
+			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Within cells interlinked.">
 				<span>Interrogator: </span>Within cells interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Within cells interlinked.
+			[K] Within cells interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Why don't you say that three times: within cells interlinked" >
 				<span>Interrogator: </span>Why don't you say that three times: "within cells interlinked"
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Within cells interlinked.
+			[K] Within cells interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Within cells interlinked.
+			[K] Within cells interlinked.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Within cells interlinked.
+			[K] Within cells interlinked.
 		</p>
 		<p class="voice4">
 			We're done.
@@ -158,7 +158,7 @@
 			You can pick up your bonus.
 		</p>
 		<p class="voice2">
-			<span id="officier">Officier K:</span> Thank you, sir.
+			[K] Thank you, sir.
 		</p>
 
 
