--- a/closed-captions/index.html
+++ b/closed-captions/index.html
@@ -23,7 +23,7 @@
 			[K] Yes, sir
 		</p>
 		<p class="voice1" data-text="Interrogator: Recite your baseline.">
-				<span>Interrogator: </span>Recite your baseline. 
+				<span>[Interrogator:] </span>Recite your baseline. 
 		</p>
 		<p class="voice2">
 			[K] And blood-black nothingness began to spin
@@ -41,31 +41,31 @@
 			[K] And dreadfully distinct against the dark, a tall white fountain played...
 		</p>
 		<p class="voice1" data-text="Interrogator: Cells.">
-			<span>Interrogator: </span>Cells.
+			<span>[Interrogator:] </span>Cells.
 		</p>
 		<p class="voice2">
 			[K] Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: Have you ever been in an institution?">
-				<span>Interrogator: </span>Have you ever been in an institution?
+				<span>[Interrogator:] </span>Have you ever been in an institution?
 		</p>
 		<p class="voice1">
-				<span>Interrogator: </span>Cells.
+				<span>[Interrogator:] </span>Cells.
 		</p>
 		<p class="voice2">
 			[K]Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do they keep you in a cell?">
-				<span>Interrogator: </span>Do they keep you in a cell?
+				<span>[Interrogator:] </span>Do they keep you in a cell?
 		</p>
 		<p class="voice1" data-text="Cells.">
-				<span>Interrogator: </span>Cells.
+				<span>[Interrogator:] </span>Cells.
 		</p>
 		<p class="voice2">
 			[K] Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: When you're not performing your duties, do they keep you in a little box?">
-				<span>Interrogator: </span>When you're not performing your duties, do they keep you in a little box?
+				<span>[Interrogator:] </span>When you're not performing your duties, do they keep you in a little box?
 		</p>
 		<p class="voice1" data-text="Cells.">
 			Cells.
@@ -74,64 +74,64 @@
 			[K] Cells.
 		</p>
 		<p class="voice1" data-text="Interrogator: Interlinked.">
-				<span>Interrogator: </span>Interlinked.
+				<span>[Interrogator:] </span>Interlinked.
 		</p>
 		<p class="voice2">
 			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: What's it like to hold the hand of someone you love?">
-				<span>Interrogator: </span>What's it like to hold the hand of someone you love?
+				<span>[Interrogator:] </span>What's it like to hold the hand of someone you love?
 		</p>
 		<p class="voice1" data-text="Interrogator: Interlinked.">
-				<span>Interrogator: </span>Interlinked.
+				<span>[Interrogator:] </span>Interlinked.
 		</p>
 		<p class="voice2">
 			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Did they teach you how to feel, finger to finger?">
-				<span>Interrogator: </span>Did they teach you how to feel, finger to finger?
+				<span>[Interrogator:] </span>Did they teach you how to feel, finger to finger?
 		</p>
 		<p class="voice1" data-text="Interrogator: Interlinked.">
-				<span>Interrogator: </span>Interlinked.
+				<span>[Interrogator:] </span>Interlinked.
 		</p>
 		<p class="voice2">
 			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do you long for having your heart interlinked?">
-				<span>Interrogator: </span>Do you long for having your heart interlinked?
+				<span>[Interrogator:] </span>Do you long for having your heart interlinked?
 		</p>
 		<p class="voice1" data-text="Interrogator: Interlinked.">
-				<span>Interrogator: </span>Interlinked.
+				<span>[Interrogator:] </span>Interlinked.
 		</p>
 		<p class="voice2">
 			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do you dream about being interlinked?">
-				<span>Interrogator: </span>Do you dream about being interlinked?
+				<span>[Interrogator:] </span>Do you dream about being interlinked?
 		</p>
 		<p class="voice2">
 			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: What's it like to hold your child in your arms?">
-				<span>Interrogator: </span>What's it like to hold your child in your arms?
+				<span>[Interrogator:[] </span>What's it like to hold your child in your arms?
 		</p>
 		<p class="voice1" data-text="Interrogator: Interlinked.">
-				<span>Interrogator: </span>Interlinked.
+				<span>[Interrogator:[] </span>Interlinked.
 		</p>
 		<p class="voice2">
 			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Do you feel that there's a part of you that's missing?">
-				<span>Interrogator: </span>Do you feel that there's a part of you that's missing?
+				<span>[Interrogator:] </span>Do you feel that there's a part of you that's missing?
 		</p>
 		<p class="voice1" data-text="Interrogator: Interlinked.">
-				<span>Interrogator: </span>Interlinked.
+				<span>[Interrogator:] </span>Interlinked.
 		</p>
 		<p class="voice2">
 			[K] Interlinked.
 		</p>
 		<p class="voice1" data-text="Interrogator: Within cells interlinked.">
-				<span>Interrogator: </span>Within cells interlinked.
+				<span>[Interrogator:] </span>Within cells interlinked.
 		</p>
 		<p class="voice2">
 			[K] Within cells interlinked.
